[PlaylistScreen] Create my playlist screen

--- a/assets/.env
+++ b/assets/.env
@@ -1,5 +1,6 @@
-flavor='prod'
+flavor='mock'
 endpoint='https://api.spotify.com/v1/'
+oauth_endpoint='https://accounts.spotify.com/api/token'
 client_id='0ae4583f228b4571ba9e283b28bee353'
 client_secret='0b94b0838b6b4794ae918537a95d81df'
 
