[Search] Integrate search api

--- a/assets/.env
+++ b/assets/.env
@@ -1,4 +1,4 @@
-flavor='mock'
+flavor='prod'
 endpoint='https://api.spotify.com/v1/'
 oauth_endpoint='https://accounts.spotify.com/api/token'
 client_id='0ae4583f228b4571ba9e283b28bee353'
